--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.12.3",
-    "mongoose": "*"
+    "mongoose": "*",
+    "pg": "^4.3.0"
   }
 }
